# failsim

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
failsim/: __init__.py  _artist.py  _helpers.py  analysis.py  aperture.py  beams.py  checks.py  failsim.py  globals.py  helpers.py  lhc_sequence.py  results.bak.py  results.py  sequence.py  sequence_tracker.py  tracker.py
failsim/data/: analysis_parameters.yaml  metadata.yaml
failsim/data/aperture/ldb/: aperture.parquet  convert.py
failsim/data/aperture/ldb/raw/: LHC-apertures-YETS 2022-2023-IP1.csv  LHC-apertures-YETS 2022-2023-IP2.csv  LHC-apertures-YETS 2022-2023-IP3.csv  LHC-apertures-YETS 2022-2023-IP4.csv  LHC-apertures-YETS 2022-2023-IP5.csv  LHC-apertures-YETS 2022-2023-IP6.csv  LHC-apertures-YETS 2022-2023-IP7.csv  LHC-apertures-YETS 2022-2023-IP8.csv
