[tool.poetry]
name = "failsim"
version = "0.1.0"
description = "LHC fast failure simulation toolkit"
authors = ["Cédric Hernalsteens <cedric.hernalsteens@cern.ch>", "Oskari Tuormaa"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.3"
cpymad = "^1.7.0"
pyarrow = "^3.0.0"
PyYAML = "^5.4.1"
pymask = { path = "../lhcmask", develop = true }

[tool.poetry.dev-dependencies]
mypy = "^0.812"
jupyter = "^1.0.0"
jupyterlab = "^3.0.12"
sphinx = "^3.5.4"
sphinx-material = { git = "https://github.com/bashtage/sphinx-material.git" }
sphinx-automodapi = "^0.13"
m2r2 = "^0.2.7"
pandoc = "^1.0.2"
nbsphinx = "^0.8.2"
pytest = "^6.2.2"
pytest-bdd = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
