[tool.poetry]
name = "failsim"
version = "2021.1"
description = "LHC fast failure simulation toolkit"
authors = ["Cédric Hernalsteens <cedric.hernalsteens@cern.ch>", "Oskari Tuormaa"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.3"
cpymad = "^1.7.0"
pyarrow = "^3.0.0"
PyYAML = "^5.4.1"

pymask = { path = "failsim/data/pymask/", develop = true }

[tool.poetry.dev-dependencies]
mypy = "^0.812"
jupyter = "^1.0.0"
jupyterlab = "^3.0.12"
pytest = "^6.2.2"
pytest-bdd = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
